perf: fixed performance of tools